# sdl2-pointerless

./: .gitignore  CMakeLists.txt  IDE_USAGE.md  LICENSE  README.md  rename_project.sh
include/: .include_dir
src/: main.c
